# py-bc-excel2pycl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli_demo.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  github.yml
examples/: exec.py  parse.py
examples/temp/: c_4920417254735941335.py
excel2pycl/: __init__.py
excel2pycl/src/: abstract_excel_in_python_class.py  ast_builder.py  cell.py  context.py  excel.py  handle_cell.py  lexer.py  object_loader.py
excel2pycl/src/exceptions/: __init__.py  e2pycl_cell_exception.py  e2pycl_exception.py  e2pycl_executor_exception.py  e2pycl_parser_exception.py  e2pycl_safety_exception.py  e2pycl_translation_exception.py
excel2pycl/src/tokens/: __init__.py  base_token.py  composite_base_token.py  recursive_composite_base_token.py  regexp_base_token.py  undefined_token.py
excel2pycl/src/translators/: __init__.py  abstract_translator.py  address_cc_token_translator.py  and_cc_token_translator.py  average_cc_token_translator.py  averageifs_cc_token_translator.py  cc_token_translator.py  cell_identifier_range_token_translator.py  cell_translator.py  column_cc_token_translator.py  concatenate_cc_token_translator.py  count_cc_token_translator.py  countblank_cc_token_translator.py  countifs_cc_token_translator.py  date_cc_token_translator.py  date_dif_cc_token_translator.py  date_diff_cc_translator.py  day_cc_token_translator.py  e_date_cc_token_translator.py  entry_point_token_translator.py  eo_month_cc_token_translator.py  expression_token_translator.py  (+37 more)
src/: ast_builder.py  cell.py  context.py  excel.py  lexer.py  object_loader.py
src/tokens/: __init__.py  base_token.py  composite_base_token.py  recursive_composite_base_token.py  regexp_base_token.py  undefined_token.py
src/translators/: __init__.py  abstract_translator.py  average_cc_token_translator.py  cc_token_translator.py  cell_identifier_range_token_translator.py  cell_translator.py  entry_point_token_translator.py  expression_token_translator.py  if_cc_token_translator.py  lambda_token_translator.py  matrix_of_cell_identifiers_token_translator.py  operand_token_translator.py  operator_sub_token_translator.py  sum_cc_token_translator.py  sum_if_cc_token_translator.py  vlookup_cc_token_translator.py
test/: Excel2PyCl.xlsx  test.py  test_averageifs_cc_token.py  test_comparations.py  test_count_blank_token.py  test_ifc_token.py  test_ifs_token.py  test_networks_day_cc_token.py  test_search_cc_token.py  tokens.xlsx  worksheet_creator.py
tests/: Excel2PyCl.xlsx  test.py  test_averageifs_cc_token.py  test_comparations.py  test_count_blank_token.py  test_ifs_token.py  test_networks_day_cc_token.py  test_search_cc_token.py  tests.py  tokens.xlsx  worksheet_creator.py
(+9 files in other folders)
